Bug 156283 - SVG: wrong display when list of dx is longer than list of x
Summary: SVG: wrong display when list of dx is longer than list of x
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords: filter:svg
: 118428 (view as bug list)
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-07-14 09:14 UTC by Xisco Faulí
Modified: 2023-08-03 15:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (145 bytes, image/svg+xml)
2023-07-14 09:14 UTC, Xisco Faulí
Details
another example (628 bytes, image/svg+xml)
2023-07-14 09:57 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-07-14 09:14:15 UTC
Created attachment 188368 [details]
sample file

This is a follow-up of bug 156271 that i'm reporting because I didn't have time to fix and since I'm going on vacation I don't have to forget about it.

Steps to reproduce:
1. Open attachment
2. Compare

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5a6b938d324798433298ec7320c813c82ace4590
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 stragu 2023-07-14 09:49:42 UTC
Repro in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 77fca616e0bd79e0b405fd0b3543cf8e94e15df3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Already bad in 4.0.0.3
Comment 2 Xisco Faulí 2023-07-14 09:57:44 UTC
Created attachment 188369 [details]
another example
Comment 3 Commit Notification 2023-08-01 21:28:41 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ac8fd70e4e23d12857f766a4918747bbc5a7cb9b

tdf#156283: take remaing dx value into consideration too

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2023-08-02 11:52:37 UTC
*** Bug 118428 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2023-08-03 08:05:35 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/879511812741be3564f00406da6c1e722180f155

tdf#156283: take remaing dx value into consideration too

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 stragu 2023-08-03 15:15:05 UTC
Fix verified in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eef0c5d4d45ba35acfb6d8f7551fe565ca4badaa
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you!