tdf#156283: take remaing dx value into consideration too

Change-Id: I27c6f12edacd68c7f956b67dcf9ef0cc5045e3d1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155169
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>