svgio/inc/svgcharacternode.hxx
@@ -82,6 +82,7 @@ namespace svgio::svgreader
             SvgTextPosition*            mpParent;
             ::std::vector< double >     maX;
             ::std::vector< double >     maY;
+            ::std::vector< double >     maDx;
             ::std::vector< double >     maRotate;
             double                      mfTextLength;
 
@@ -103,6 +104,7 @@ namespace svgio::svgreader
             // data read access
             const SvgTextPosition* getParent() const { return mpParent; }
             const ::std::vector< double >& getX() const { return maX; }
+            const ::std::vector< double >& getDx() const { return maDx; }
             double getTextLength() const { return mfTextLength; }
             bool getLengthAdjust() const { return mbLengthAdjust; }
             bool getAbsoluteX() const { return mbAbsoluteX; }
